[gd_scene load_steps=19 format=3 uid="uid://cciputavx7q0i"]

[ext_resource type="Shader" path="res://shader/back_loop.gdshader" id="1_0hx8g"]
[ext_resource type="Script" path="res://script/UI/title/title.gd" id="1_mlxui"]
[ext_resource type="Texture2D" uid="uid://p32mycwhi73y" path="res://object/background/title_back3.png" id="2_yyyn3"]
[ext_resource type="Texture2D" uid="uid://cdes3xoqu5ys8" path="res://object/title/santa_title_logo3.png" id="3_0hvsq"]
[ext_resource type="FontFile" uid="uid://dmvkns7s48n77" path="res://object/font/pc_9800.ttf" id="5_r46dr"]
[ext_resource type="Texture2D" uid="uid://ctunw183cukcx" path="res://object/frame/titile_frame.png" id="6_hg2yf"]
[ext_resource type="PackedScene" uid="uid://d4kgqg5bxvtc7" path="res://script/UI/title/explanation.tscn" id="7_4wdm0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0iyim"]
shader = ExtResource("1_0hx8g")
shader_parameter/scrool_speed = 0.1

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_q0x0u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4hqbi"]
size = Vector2(594.5, 19.5)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_vceii"]
bounce = 0.52

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpiq7"]
size = Vector2(606.5, 239)

[sub_resource type="Animation" id="Animation_7k05p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vg8h5"]
resource_name = "start_label_visible"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ljaqx"]
_data = {
"RESET": SubResource("Animation_7k05p"),
"start_label_visible": SubResource("Animation_vg8h5")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xo1iv"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbm4s"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bopd8"]
draw_center = false

[node name="title" type="Control" groups=["title"]]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mlxui")

[node name="TitleBack3" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_0iyim")
position = Vector2(320, 200)
texture = ExtResource("2_yyyn3")

[node name="StaticBody2D" type="StaticBody2D" parent="." groups=["ground"]]
physics_material_override = SubResource("PhysicsMaterial_q0x0u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(321, 292.75)
shape = SubResource("RectangleShape2D_4hqbi")

[node name="RigidBody2D" type="RigidBody2D" parent="." groups=["logo"]]
position = Vector2(320, 50)
physics_material_override = SubResource("PhysicsMaterial_vceii")
contact_monitor = true
max_contacts_reported = 1

[node name="SantaTitleLogo3" type="Sprite2D" parent="RigidBody2D" groups=["logo"]]
texture_filter = 1
texture = ExtResource("3_0hvsq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(3, -43.5)
shape = SubResource("RectangleShape2D_fpiq7")

[node name="start_label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.057
offset_left = 203.0
offset_top = 331.0
offset_right = 443.0
offset_bottom = 338.2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_r46dr")
theme_override_font_sizes/font_size = 28
text = "Press Z to Start"

[node name="AnimationPlayer" type="AnimationPlayer" parent="start_label"]
libraries = {
"": SubResource("AnimationLibrary_ljaqx")
}

[node name="TitileFrame" type="Sprite2D" parent="."]
visible = false
position = Vector2(320, 353)
texture = ExtResource("6_hg2yf")

[node name="VBoxContainer" type="VBoxContainer" parent="TitileFrame"]
offset_left = -44.0
offset_top = -36.0
offset_right = 45.0
offset_bottom = 36.0
theme_override_constants/separation = 0

[node name="start" type="Button" parent="TitileFrame/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("5_r46dr")
theme_override_styles/focus = SubResource("StyleBoxFlat_xo1iv")
text = "はじめる"
flat = true

[node name="option" type="Button" parent="TitileFrame/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("5_r46dr")
theme_override_font_sizes/font_size = 15
theme_override_styles/focus = SubResource("StyleBoxFlat_tbm4s")
text = "オプション"
flat = true

[node name="explanation" type="Button" parent="TitileFrame/VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("5_r46dr")
theme_override_styles/focus = SubResource("StyleBoxFlat_bopd8")
text = "説明"
flat = true

[node name="explanation" parent="." instance=ExtResource("7_4wdm0")]
visible = false
layout_mode = 1

[connection signal="body_entered" from="RigidBody2D" to="." method="_on_rigid_body_2d_body_entered"]
[connection signal="mouse_entered" from="TitileFrame/VBoxContainer/start" to="." method="_on_mouse_entered" binds= [0]]
[connection signal="mouse_exited" from="TitileFrame/VBoxContainer/start" to="." method="_on_mouse_exited" binds= [0]]
[connection signal="pressed" from="TitileFrame/VBoxContainer/start" to="." method="_on_pressed" binds= [0]]
[connection signal="mouse_entered" from="TitileFrame/VBoxContainer/option" to="." method="_on_mouse_entered" binds= [1]]
[connection signal="mouse_exited" from="TitileFrame/VBoxContainer/option" to="." method="_on_mouse_exited" binds= [1]]
[connection signal="pressed" from="TitileFrame/VBoxContainer/option" to="." method="_on_pressed" binds= [1]]
[connection signal="mouse_entered" from="TitileFrame/VBoxContainer/explanation" to="." method="_on_mouse_entered" binds= [2]]
[connection signal="mouse_exited" from="TitileFrame/VBoxContainer/explanation" to="." method="_on_mouse_exited" binds= [2]]
[connection signal="pressed" from="TitileFrame/VBoxContainer/explanation" to="." method="_on_pressed" binds= [2]]
